--- a/src/app/components/config/game-config.component.html
+++ b/src/app/components/config/game-config.component.html
@@ -8,7 +8,7 @@
 
   <div class="form-group">
     <label for="size">Tamaño del tablero:</label>
-    <input id="size" type="number" formControlName="size" min="4"/>
+    <input id="size" type="number" formControlName="size" min="4" max="20"/>
   </div>
 
   <div class="form-group">
