fix sonar issues

--- a/src/app/components/controls/game-controls.component.html
+++ b/src/app/components/controls/game-controls.component.html
@@ -1,5 +1,5 @@
 
-<aside class="game-controls" role="complementary" aria-label="Game Controls">
+<aside class="game-controls" aria-label="Game Controls">
   <h2 class="title">Controles</h2>
   <ul class="control-list">
     <li><span class="key">⬆</span> Avanzar</li>
