--- a/src/app/components/ranking/score-board.component.scss
+++ b/src/app/components/ranking/score-board.component.scss
@@ -11,9 +11,7 @@
   max-height: 80vh;
   overflow-y: auto; 
   display: none; 
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: opacity 0.3s ease-in-out;
-  z-index: 10;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
   font-family: "Segoe UI", sans-serif;
   z-index: 25;
@@ -41,14 +39,10 @@
 .scoreboard td {
   padding: 5px;
   text-align: left;
-}
-
-.scoreboard td {
   font-size: 0.9rem;
-}
-
-.scoreboard td:first-child {
-  font-weight: bold;
+  &:first-child {
+    font-weight: bold;
+  }
 }
 
 .trophy-icon {
