--- a/src/app/components/achieve-toast/toast.component.scss
+++ b/src/app/components/achieve-toast/toast.component.scss
@@ -5,8 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  font-size: x-large;
+  font-size: large;
   z-index: 2000;
+  line-height:1.5rem;
 }
 
 .toast {
@@ -19,7 +20,7 @@
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   animation: fadeIn 0.3s ease-in;
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .icon {
