--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     background-color: #1a202c;
+    font-family: 'Press Start 2P', monospace;
 }
 
   button {
