--- a/src/app/components/message/game-message.component.scss
+++ b/src/app/components/message/game-message.component.scss
@@ -12,10 +12,17 @@
   text-align: center;
   margin-top: 20px;
   text-shadow: 0 0 5px #00ffea;
+  cursor: pointer;
 }
 
 @keyframes blink {
   50% {
     opacity: 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  .game-message{
+    font-size: large;
   }
 }
