--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -27,7 +27,7 @@
 <div class="menu-desktop">
   <div class="left-icons">
     <app-scoreboard />
-    <img class="achivements" routerLink="/logros" src="trophy.svg" alt="logros" role="button">
+    <img class="achivements" routerLink="/logros" src="trophy.svg" alt="logros">
   </div>
   <div class="right-icon">
     <ng-content></ng-content>
