--- a/src/app/pages/hunt-bisho.component.scss
+++ b/src/app/pages/hunt-bisho.component.scss
@@ -18,11 +18,7 @@ main {
   margin: 0 auto;
   justify-content: center;
   align-items: center;
-  background-color: darkgrey;
-}
-
-app-game-config {
-  background-color: darkgrey;
+  background-color: #f3f4f6;
 }
 
 @for $i from 4 through 20 {
