--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -16,7 +16,7 @@
     position: absolute;
     width: 100%;
     height: 4px;
-    background-color: #00ff5e;;
+    background-color: #00ff5e;
     transition: 0.3s ease;
   }
 
