--- a/src/app/components/config/game-config.component.html
+++ b/src/app/components/config/game-config.component.html
@@ -21,5 +21,5 @@
     <input id="arrows" type="number" formControlName="arrows" min="1"/>
   </div>
 
-  <button type="submit" [disabled]="configForm.invalid">Jugar</button>
+  <button type="submit" [disabled]="configForm.invalid" class="start-game">Jugar</button>
 </form>
