--- a/src/app/components/config/game-config.component.scss
+++ b/src/app/components/config/game-config.component.scss
@@ -1,7 +1,8 @@
 .config-form {
+  padding: 1rem;
   h2 {
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: #333;
   }
 
@@ -13,6 +14,7 @@
     label {
       font-weight: 600;
       margin-bottom: 0.5rem;
+      font-size: .9rem;
     }
 
     input {
@@ -31,5 +33,6 @@
 
   button {
     width: 100%;
+    font-family: 'Press Start 2P', monospace;;
   }
 }
