--- a/src/app/components/title/title.component.scss
+++ b/src/app/components/title/title.component.scss
@@ -1,3 +1,10 @@
+
+.title{
+  margin: 0 auto;
+  max-width: min(80vw,800px);
+}
+
+
 .neon-letter {
         font-family: 'Arial Black', sans-serif;
         font-size: 60px;
