--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,11 +1,12 @@
 .menu-toggle {
-  width: 30px;
+  width: 45px;
   position: absolute;
   cursor: pointer;
   display: none;
   border-bottom: 0;
   height: 45px;
   z-index: 999;
+  background: none;
 
 
   .bar {
