--- a/src/app/components/controls/game-controls.component.scss
+++ b/src/app/components/controls/game-controls.component.scss
@@ -1,10 +1,18 @@
 
 .controller-icon {
-  width: 90px;
-  height: 90px;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-  z-index: 20;
+  min-width: 0;
+  background: none;
+  padding: 0;
+  margin: 0;
+
+  img {
+    width: 90px;
+    height: 90px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    z-index: 20;
+  }
+
   &:hover {
     transform: scale(1.1);
   }
