--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,24 +1,20 @@
 @let opened = isOpen();
 
-<div 
+<button 
     class="menu-toggle" 
     [class.open]="opened"
-    (click)="toggleMenu()" 
-    (keypress)="toggleMenu()" 
-    role="button" 
-    tabindex="0"
+    (click)="toggleMenu()"  
 >
   <div [ngClass]="{ 'bar': true, 'bar1': true, 'open': opened }"></div>
   <div [ngClass]="{ 'bar': true, 'bar2': true, 'open': opened }"></div>
   <div [ngClass]="{ 'bar': true, 'bar3': true, 'open': opened }"></div>
-</div>
+</button>
 
 <div class="mobile-menu" *ngIf="opened">
   <ul>
     <li routerLink="/home">Inicio</li>
     <li>Ranking</li>
     <li routerLink="/logros">Logros</li>
-    <li>Controles</li>
   </ul>
 </div>
 
