--- a/src/app/components/config/game-config.component.scss
+++ b/src/app/components/config/game-config.component.scss
@@ -33,6 +33,6 @@
 
   button {
     width: 100%;
-    font-family: 'Press Start 2P', monospace;;
+    font-family: 'Press Start 2P', monospace;
   }
 }
