--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -5,12 +5,20 @@
         <p>Activa el sonido, recoge la moneda y vuelve al inicio.</p>
       }
       @if(!isAlive() && settings()){
-        <p class="newgame" (click)="restartGame()" (keydown)="restartGame()" tabindex="0">
+        <button 
+          class="newgame" 
+          (click)="restartGame()" 
+          aria-label="Reiniciar el juego"
+        >
           Haz click para intertarlo de nuevo
-        </p>
+        </button>
       }@else if (hasWon() && settings()) {
-        <p class="newgame" (click)="newGame()" (keydown)="newGame()" tabindex="0">
+        <button 
+          class="newgame" 
+          (click)="newGame()" 
+          aria-label="Nuevo juego"
+        >
           Felicidades click para empezar una nueva partida
-        </p>
+        </button>
       }
 </section>
