--- a/src/app/components/message/game-message.component.scss
+++ b/src/app/components/message/game-message.component.scss
@@ -6,17 +6,19 @@
 }
 
 .newgame {
-  animation: blink 1s step-start infinite;
+  background: none;
+  animation: blink 3s step-start infinite;
   color: #00ffea;
   font-size: 16px;
   text-align: center;
   margin-top: 20px;
   text-shadow: 0 0 5px #00ffea;
   cursor: pointer;
+  font-family: 'Press Start 2P', monospace;
 }
 
 @keyframes blink {
-  50% {
+  20% {
     opacity: 0;
   }
 }
