next level game

--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -15,10 +15,10 @@
       }@else if (hasWon() && settings()) {
         <button 
           class="newgame" 
-          (click)="newGame()" 
-          aria-label="Nuevo juego"
+          (click)="nextLevel()" 
+          aria-label="Nuevo nivel"
         >
-          Felicidades click para empezar una nueva partida
+          Felicidades click para empezar el siguiente nivel
         </button>
       }
 </section>
