--- a/src/app/components/achievements/achievements.component.scss
+++ b/src/app/components/achievements/achievements.component.scss
@@ -206,7 +206,8 @@
 }
 
 .achievement-title {
-  font-size: 1.25rem;
+  font-size: 1rem;
+  line-height: 1.3;
   font-weight: 700;
   overflow-wrap: break-word;
   white-space: normal;
@@ -249,8 +250,9 @@
 .achievement-description {
   color: #a0aec0;
   margin-bottom: 1rem;
-  overflow-wrap: break-word;
-  white-space: normal;
+  line-height: 1.3;
+  font-size: .9rem;
+
 
   @media (max-width: 400px) {
     font-size: .7rem;
