arrow on the ground

--- a/src/app/components/achievements/achievements.component.scss
+++ b/src/app/components/achievements/achievements.component.scss
@@ -20,10 +20,11 @@
 .back-link {
   display: flex;
   align-items: center;
-  color: #a0aec0;
+  color: #00ff5e;
   margin-right: 1rem;
   text-decoration: none;
   transition: color 0.3s;
+  font-size: 1.5rem;
 }
 
 .back-link:hover {
