--- a/src/app/components/message/game-message.component.scss
+++ b/src/app/components/message/game-message.component.scss
@@ -28,3 +28,10 @@
     font-size: large;
   }
 }
+
+.level{
+  margin: .3rem auto 0;
+  color: white;
+  font-size: 0.8rem;
+  text-align: center;
+}
