--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -12,6 +12,7 @@
 
 <div class="mobile-menu" *ngIf="opened">
   <ul>
+    <li> &nbsp; </li>
     <li routerLink="/home">Inicio</li>
     <li>Ranking</li>
     <li routerLink="/logros">Logros</li>
