--- a/src/app/components/achievements/achievements.component.scss
+++ b/src/app/components/achievements/achievements.component.scss
@@ -15,6 +15,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 2rem;
+  z-index: 6;
+  position: relative;
   @media (max-width: 1024px) {
     display: none;
   }
