--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -3,7 +3,7 @@
 @let hunterData = hunter();
 @let isAlive = hunterData.alive;
 @let hasWon = hunterData.hasWon;
-@let settings = game.settings;
+@let settings = game.settings();
 
 <main [appVisualEffect]="game.message()">
 
@@ -14,7 +14,7 @@
   }
 
   <section class="board">
-    @if (settings) {
+    @if (settings.size) {
       @for (row of board; track $index) {
         <div class="row">
           @for (cell of row; track $index) {
@@ -34,7 +34,7 @@
     [hasWon]="hasWon"
     [settings]="settings">
   </app-game-message>
-  @if (settings) {
+  @if (settings.size) {
     <app-mobile-controls [isFinish]="hasWon || !isAlive"/>
   }
 
