--- a/src/app/pages/hunt-bisho.component.html
+++ b/src/app/pages/hunt-bisho.component.html
@@ -12,7 +12,6 @@
   @if(settings?.blackout && isAlive && !hasWon){
     <app-blackout />
   }
-
   <section class="board">
     @if (settings.size) {
       @for (row of board; track $index) {
@@ -28,12 +27,20 @@
     }
   </section>
 
+  @if (settings.size) {
+    <section class="player-info">
+      <app-game-level [settings]="settings"></app-game-level>
+      <app-game-lives [lives]="hunterData.lives"></app-game-lives>
+    </section>
+  }
+
   <app-game-message 
     [message]="game.message()" 
     [isAlive]="hunterData.alive"
     [hasWon]="hasWon"
     [settings]="settings">
   </app-game-message>
+
   @if (settings.size) {
     <app-mobile-controls [isFinish]="hasWon || !isAlive"/>
   }
