--- a/src/app/pages/hunt-bisho.component.scss
+++ b/src/app/pages/hunt-bisho.component.scss
@@ -28,3 +28,10 @@ main {
 }
 
 app-title{ z-index: 10; position: relative;}
+
+.player-info {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: .2rem;
+}
