--- a/src/app/components/message/game-message.component.html
+++ b/src/app/components/message/game-message.component.html
@@ -1,30 +1,39 @@
 <section class="game-message" aria-live="polite">
+  @if(lives() <= 0){
+    <p>GAME OVER! te quedaste sin vidas #haberestudiao</p>
+      <button
+        class="newgame"
+        (click)="newGame()"
+        aria-label="Nueva partida"
+      >Empezar una nueva partida</button>
+  }@else{
+    @if (_hasMessage()) {
+      <p>{{ message() }}</p>
+    }@else {
+      <p>Activa el sonido, recoge la moneda y vuelve al inicio.</p>
+    }
 
-  @if (_hasMessage()) {
-    <p>{{ message() }}</p>
-  }@else {
-    <p>Activa el sonido, recoge la moneda y vuelve al inicio.</p>
+    @if (_shouldShowRetry()) {
+      <button
+        class="newgame"
+        (click)="restartGame()"
+        aria-label="Reiniciar el juego"
+      >
+        Haz click para intertarlo de nuevo
+      </button>
+    } @else if (_shouldShowNextLevel()) {
+      <button
+        class="newgame"
+        (click)="nextLevel()"
+        aria-label="Nuevo nivel"
+      >
+        @if (_showCongrats()) {
+          <span>Felicidades click para empezar el siguiente nivel.</span>
+        } @else {
+          <span>FELICIDADES!! Has completado todos los niveles!</span>
+        }
+      </button>
+    }
   }
 
-  @if (_shouldShowRetry()) {
-    <button
-      class="newgame"
-      (click)="restartGame()"
-      aria-label="Reiniciar el juego"
-    >
-      Haz click para intertarlo de nuevo
-    </button>
-  } @else if (_shouldShowNextLevel()) {
-    <button
-      class="newgame"
-      (click)="nextLevel()"
-      aria-label="Nuevo nivel"
-    >
-      @if (_showCongrats()) {
-        <span>Felicidades click para empezar el siguiente nivel.</span>
-      } @else {
-        <span>FELICIDADES!! Has completado todos los niveles!</span>
-      }
-    </button>
-  }
 </section>
