--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -9,7 +9,7 @@
     [class.hunter]="hasHunter"
 >
 
-    @if (!isAlive || _hunter.hasWon) {
+    @if (!isAlive || _hunter.hasWon || true) {
         @if (cell().hasWumpus) {
             <img [src]="'wumpus.svg'" alt="wumpus" aria-label="wumpus"/>
         }
@@ -19,8 +19,8 @@
         @else if (cell().hasPit) {
             <img [src]="'pit.svg'" alt="pit" aria-label="pit"/>
         }
-        @else if (cell().hasArrow) {
-            <img [src]="'arrow.svg'" alt="arrow" aria-label="arrow"/>
+        @else if (cell().content) {
+            <img [src]="cell().content?.image" alt="arrow" aria-label="arrow"/>
         }
     }
     @if(hasHunter && isAlive){
