--- a/src/app/components/cell/game-cell.component.html
+++ b/src/app/components/cell/game-cell.component.html
@@ -9,17 +9,8 @@
     [class.hunter]="hasHunter"
 >
 
-    @if (!isAlive || _hunter.hasWon || true) {
-        @if (cell().hasWumpus) {
-            <img [src]="'wumpus.svg'" alt="wumpus" aria-label="wumpus"/>
-        }
-        @else if (cell().hasGold) {
-            <img [src]="'gold.svg'" alt="gold coin" aria-label="gold"/>
-        }
-        @else if (cell().hasPit) {
-            <img [src]="'pit.svg'" alt="pit" aria-label="pit"/>
-        }
-        @else if (cell().content) {
+    @if (!isAlive || _hunter.hasWon) {
+        @if (cell().content) {
             <img [src]="cell().content?.image" alt="arrow" aria-label="arrow"/>
         }
     }
